--- a/app/src/component-library/components/tooltip/style.scss
+++ b/app/src/component-library/components/tooltip/style.scss
@@ -1,9 +1,14 @@
 //Variables
-$tooltip-text-color: white;
-$tooltip-background-color: black;
+$tooltip-text-color: #333;
+$tooltip-background-color: #fff;
+$gray-background: #f8f8f8;
 $tooltip-margin: 30px;
 $tooltip-arrow-size: 6px;
+$blue-color: #426da9;
 
+* {
+  box-sizing: border-box;
+}
 /* Wrapping */
 .Tooltip-Wrapper {
   display: inline-block;
@@ -18,14 +23,17 @@ $tooltip-arrow-size: 6px;
   border-radius: 4px;
   left: 50%;
   transform: translateX(-50%);
-  padding: 6px;
   color: $tooltip-text-color;
   background: $tooltip-background-color;
   font-size: 14px;
-  line-height: 1;
-  bottom: calc(#{$tooltip-margin} * -1);
+  //line-height: 1;
+  top: calc(#{$tooltip-margin} * 1.5);
   transition: all 0.4s ease-in-out;
   white-space: nowrap;
+  box-shadow: 0px 0px 10px 0px rgba(51, 51, 51, 0.3);
+  display: flex;
+  //flex-direction: row;
+  //justify-content: center;
 }
 
 /* CSS border triangles */
@@ -41,4 +49,47 @@ $tooltip-arrow-size: 6px;
   margin-left: calc(#{$tooltip-arrow-size} * -1);
   bottom: 100%;
   border-bottom-color: $tooltip-background-color;
+}
+
+/* tooptip left content */
+.leftContent {
+  flex: 50%;
+  padding: 25px;
+  ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    li {
+      padding: 15px;
+    }
+  }
+}
+.left-addon {
+  line-height: 3rem;
+  border-top: 1px solid #dbdbdb;
+  margin: 2rem 1rem 0 1rem;
+  &::before {
+    content: " ";
+    background: $blue-color;
+  }
+}
+
+.rightContent {
+  flex: 50%;
+  padding: 25px;
+  background: $gray-background;
+  text-align: center;
+}
+
+.rightSideText {
+  font-size: 16px;
+  font-weight: 500;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  max-width: 260px;
+  max-height: 196px;
 }
